|                                                                 |
|         - AWStats:                                              |
|               * apache: set statsdir if awstats is enabled      |
|               * gui: disable stats-alias in client menu         |
\_________________________________________________________________/

2007-02-15 Benedikt Heintel
	- GUI:
		* renamed domain.gif to domains.gif (spelling-mistake)
		* fixed language upload
		* fixed bug #75: Error occured when upload a new custom logo
	- LANGUAGE:
		* Czech: updated missing strings
	- SETUP:
		* added Makefile for AWStats (fixed bug #82)
		* changed Makefile: added AWStats install, fixed uninstall errors, added gentoo

2007-02-14 Benedikt Heintel
	- GUI:
		* modified multilanguage upload
		* modified tab index on login
	- LANGUAGES:
		* added Czech
		* added missing strings Portugues - Brazil
	- SETUP:
		* fixed bug #79
		* added reset-setup into setup dir

2007-02-13 Benedikt Heintel
	- GUI:
		* changed design issues
		* fixed not translated message
	- LANGUAGES:
		* Ukrainian: added missing strings (complete)
	- SETUP:
		* pma user is added in config.inc.php file

2007-02-13 Laurent DECLERCQ
	- SETUP:
		* Changed set-gui-permissions (chmod 440 --> 444) If not, usual user do not access VHCS
		* Fixed error -> No input file specified for usual user
	- CONFIGS:
		* Changed all php.ini files
			- Fixed Open_basedir for usuals user (If not, vhcs has errors)
			- Fixed Disable_function for usuals user and master user (If not, vhcs has errors)
	- ENGINE:
		* Edited vhcs2-dmn-mngr :
			- Fixed error at line 1838 (name variable $http --> $httpd
			- Fixed bug #76
			- Fixed Warn --> Name "main::db" used only once: possible typo at ./vhcs2-dmn-mngr line 839

2007-02-12 Malte Geierhos
	- SETUP:
		* changed set-gui-permissions to match our new webmailer
		* fixed bug #72 (permissions on new domain - folders are wrong created)

2007-02-12 Malte Geierhos / Henrik Schytte
	- GUI: