@@ -62,3 +62,4 @@ AddType application/x-httpd-php .php
 #</Location>
 
 #Action php5-fastcgi /php5/php5-fcgi-starter
+</IfModule>
