@@ -25,43 +25,42 @@
 # - Finish PHP5 Support
 # - Finish config Fastcgi
 <IfDefine FCGID>
-<IfModule mod_fastcgi.c>
-FastCgiWrapper On
-FastCgiIpcDir /var/lib/apache2/fastcgi
-FastCgiConfig -minProcesses 1 -maxProcesses 10 -singleThreshold 100
-              #-killInterval 300 \
-              #-autoUpdate \
-              #-idle-timeout 240 \
-              #-pass-header HTTP_AUTHORIZATION
+	<IfModule mod_fastcgi.c>
+	FastCgiWrapper On
+	FastCgiIpcDir /var/lib/apache2/fastcgi
+	FastCgiConfig -minProcesses 1 -maxProcesses 10 -singleThreshold 100
+	              #-killInterval 300 \
+	              #-autoUpdate \
+	              #-idle-timeout 240 \
+	              #-pass-header HTTP_AUTHORIZATION
 
-FastCgiServer {PHP_STARTER_DIR}/master/php4-fcgi-starter -user {APACHE_SUEXEC_USER_PREF}{APACHE_SUEXEC_MIN_UID} -group {APACHE_SUEXEC_USER_PREF}{APACHE_SUEXEC_MIN_GID}
+	FastCgiServer {PHP_STARTER_DIR}/master/php4-fcgi-starter -user {APACHE_SUEXEC_USER_PREF}{APACHE_SUEXEC_MIN_UID} -group {APACHE_SUEXEC_USER_PREF}{APACHE_SUEXEC_MIN_GID}
 
-#
-# PHP4 SUPPORT
-#
+	#
+	# PHP4 SUPPORT
+	#
 
-AddHandler php-fastcgi .php
+	AddHandler php-fastcgi .php
 
-<Location /php4/php4-fcgi-starter>
-    SetHandler fastcgi-script
-    Options +ExecCGI
-</Location>
+	<Location /php4/php4-fcgi-starter>
+	    SetHandler fastcgi-script
+	    Options +ExecCGI
+	</Location>
 
-Action php-fastcgi /php4/php4-fcgi-starter
-AddType application/x-httpd-php .php
+	Action php-fastcgi /php4/php4-fcgi-starter
+	AddType application/x-httpd-php .php
 
-#
-# PHP5 SUPPORT
-#
+	#
+	# PHP5 SUPPORT
+	#
 
-#AddHandler php5-fastcgi .php5
+	#AddHandler php5-fastcgi .php5
 
-#<Location /php5/php5-fcgi-starter>
-#    SetHandler fastcgi-script
-#    Options +ExecCGI
-#</Location>
+	#<Location /php5/php5-fcgi-starter>
+	#    SetHandler fastcgi-script
+	#    Options +ExecCGI
+	#</Location>
 
-#Action php5-fastcgi /php5/php5-fcgi-starter
-#
-</IfModule>
+	#Action php5-fastcgi /php5/php5-fcgi-starter
+	</IfModule>
 </IfDefine>
