@@ -495,6 +495,11 @@ of = z
 ok = ok
 Ok = Ok
 OK = OK
+older than 1 month = starsze niż 1 miesiąc
+older than 12 months = starsze niż 12 miesięcy
+older than 2 weeks = starsze niż 2 tygodnie
+older than 3 months = starsze niż 3 miesiące
+older than 6 months = starsze niż 6 miesięcy
 Open tickets = Otwarte bilety
 Options = Opcje
 Other in = Inne przychodzące
@@ -1065,11 +1070,6 @@ Minute(s): = Minut:
 Months(s): = Miesięcy:
 New order = Nowe zamówienie
 Number of login attempts = Ilość prób logowania
-older than 1 month = starsze niż 1 miesiąc
-older than 12 months = starsze niż 12 miesięcy
-older than 2 weeks = starsze niż 2 tygodnie
-older than 3 months = starsze niż 3 miesiące
-older than 6 months = starsze niż 6 miesięcy
 Open ticket = Otwórz bilet
 Order = Zamówienie
 Order data updated successfully! = Dane zamówienia zaktualizowane!
