@@ -11,6 +11,18 @@ VHCS 2.4.8 ω Omega Changelog
 |               * gui: disable stats-alias in client menu         |
 \_________________________________________________________________/
 
+2007-02-22 Benedikt Heintel
+	- CONFIGS:
+		* added missing </IfModule>
+	- GUI:
+		* fixed warnings
+
+2007-02-21 Benedikt Heintel
+	- LANGUAGES:
+		* Italian: added missing strings
+		* Polish: added
+		* Czech: added missing strings
+
 2007-02-15 Benedikt Heintel
 	- GUI:
 		* renamed domain.gif to domains.gif (spelling-mistake)
